--- a/config/view5g-ue.yaml
+++ b/config/view5g-ue.yaml
@@ -41,16 +41,18 @@ sessions:
   - type: 'IPv4'
     apn: 'internet'
     slice:
-      sst: 1
+      sst: 0x1
+      sd: 0x19CDE1
 
 # Configured NSSAI for this UE by HPLMN
 configured-nssai:
-  - sst: 1
+  - sst: 0x1 
+    sd: 0x19CDE1
 
 # Default Configured NSSAI for this UE
 default-nssai:
-  - sst: 1
-    sd: 1
+  - sst: 0x1
+    sd: 0x19CDE1
 
 # Supported encryption algorithms by this UE
 integrity:
